[package]
name         = "signatory"
description  = "Multi-provider elliptic curve digital signature library with ECDSA and Ed25519 support"
version      = "0.27.1"
license      = "Apache-2.0 OR MIT"
authors      = ["Tony Arcieri <tony@iqlusion.io>"]
homepage     = "https://github.com/iqlusioninc/crates"
repository   = "https://github.com/iqlusioninc/crates/tree/main/signatory"
readme       = "README.md"
categories   = ["authentication", "cryptography"]
keywords     = ["cryptography", "ecdsa", "ed25519", "signing", "signatures"]
edition      = "2021"
rust-version = "1.65"

[dependencies]
pkcs8 = { version = "0.10", features = ["alloc", "pem"] }
rand_core = "0.6"
signature = "2.3.0-pre.4"
zeroize = "1.5"

# optional dependencies
ecdsa = { version = "0.17.0-pre.7", optional = true, features = ["pem", "pkcs8"] }
ed25519-dalek = { version = "2.2.0-pre", optional = true, default-features = false, git = "https://github.com/dalek-cryptography/curve25519-dalek/", branch="rustcrypto-new-releases" }
k256 = {git = "https://github.com/RustCrypto/elliptic-curves", optional = true, features = ["ecdsa", "sha256"]}
p256 = { version = "0.14.0-pre.1", optional = true, features = ["ecdsa", "sha256"] }
p384 = { version = "0.14.0-pre.1", optional = true, features = ["ecdsa", "sha384"] }

[dev-dependencies]
tempfile = "3"

[features]
default = ["std"]
ed25519 = ["dep:ed25519-dalek"]
nistp256 = ["dep:p256", "ecdsa"]
nistp384 = ["dep:p384", "ecdsa"]
secp256k1 = ["dep:k256", "ecdsa"]
std = ["pkcs8/std", "rand_core/std", "signature/std"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
