[package]
name        = "stdtx"
description = "Extensible schema-driven Cosmos StdTx builder and Amino serializer"
version     = "0.2.2" # Also update html_root_url in lib.rs when bumping this
authors     = ["Tony Arcieri <tony@iqlusion.io>"]
license     = "Apache-2.0"
homepage    = "https://github.com/iqlusioninc/crates/"
repository  = "https://github.com/iqlusioninc/crates/tree/develop/stdtx"
readme      = "README.md"
categories  = ["cryptography", "encoding"]
keywords    = ["amino", "crypto", "cosmos", "transaction", "tendermint"]
edition     = "2018"

[badges]
circle-ci = { repository = "tendermint/kms" }

[dependencies]
anomaly = { version = "0.2", path = "../anomaly" }
base64 = "0.13"
ecdsa = { version = "0.6", features = ["k256"] }
prost-amino = "0.6"
prost-amino-derive = "0.6"
rust_decimal = "1.6"
serde = { version = "1", features = ["serde_derive"] }
serde_json = "1"
sha2 = "0.9"
thiserror = "1"
toml = "0.5"

[dependencies.subtle-encoding]
version = "0.5"
features = ["bech32-preview"]
path = "../subtle-encoding"

[dev-dependencies]
signatory-secp256k1 = "0.20"
