[package]
name        = "stdtx"
description = "Extensible schema-driven Cosmos StdTx builder and Amino serializer"
version     = "0.4.0-pre" # Also update html_root_url in lib.rs when bumping this
authors     = ["Tony Arcieri <tony@iqlusion.io>"]
license     = "Apache-2.0"
homepage    = "https://github.com/iqlusioninc/crates/"
repository  = "https://github.com/iqlusioninc/crates/tree/develop/stdtx"
readme      = "README.md"
categories  = ["cryptography", "encoding"]
keywords    = ["amino", "crypto", "cosmos", "transaction", "tendermint"]
edition     = "2018"

[badges]
circle-ci = { repository = "tendermint/kms" }

[dependencies]
ecdsa = { version = "0.8", features = ["std"] }
eyre = "0.6"
ibc-proto = "0.5"
k256 = { version = "0.5", features = ["ecdsa", "sha256"] }
prost = "0.6"
prost-types = "0.6"
prost-amino = { version = "0.6", optional = true }
prost-amino-derive = { version = "0.6", optional = true }
rust_decimal = "1.7"
serde = { version = "1", features = ["serde_derive"] }
serde_json = "1"
sha2 = "0.9"
subtle-encoding = { version = "0.5", features = ["bech32-preview"], path = "../subtle-encoding" }
tendermint = "0.17.0-rc3"
thiserror = "1"
toml = "0.5"

[dev-dependencies]
rand_core = { version = "0.5", features = ["std"] }

[features]
amino = ["prost-amino", "prost-amino-derive"]
