[package]
name        = "stdtx"
description = "Extensible schema-driven Cosmos StdTx builder and Amino serializer"
version     = "0.5.0" # Also update html_root_url in lib.rs when bumping this
authors     = ["Tony Arcieri <tony@iqlusion.io>"]
license     = "Apache-2.0"
homepage    = "https://github.com/iqlusioninc/crates/"
repository  = "https://github.com/iqlusioninc/crates/tree/main/stdtx"
readme      = "README.md"
categories  = ["cryptography", "encoding"]
keywords    = ["amino", "crypto", "cosmos", "transaction", "tendermint"]
edition     = "2018"

[badges]
circle-ci = { repository = "tendermint/kms" }

[dependencies]
ecdsa = { version = "0.12", features = ["std"] }
eyre = "0.6"
k256 = { version = "0.9", features = ["ecdsa", "sha256"] }
prost-amino = "0.6"
prost-amino-derive = "0.6"
rust_decimal = "1.15"
serde = { version = "1", features = ["serde_derive"] }
serde_json = "1"
sha2 = "0.9"
subtle-encoding = { version = "0.5", features = ["bech32-preview"], path = "../subtle-encoding" }
thiserror = "1"
toml = "0.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
rand_core = { version = "0.6", features = ["std"] }
