[package]
name        = "subtle-encoding"
description = """
              Encoders and decoders for common data encodings (base64, bech32, hex)
              which avoid data-dependent branching/table lookups and therefore
              provide "best effort" constant time. Useful for encoding/decoding
              secret values such as cryptographic keys.
              """
version     = "0.3.4" # Also update html_root_url in lib.rs when bumping this
authors     = ["Tony Arcieri <tony@iqlusion.io>"]
license     = "Apache-2.0 OR MIT"
edition     = "2018"
homepage    = "https://github.com/iqlusioninc/crates/"
repository  = "https://github.com/iqlusioninc/crates/tree/develop/subtle-encoding"
readme      = "README.md"
categories  = ["cryptography", "encoding", "no-std"]
keywords    = ["base64", "bech32", "constant-time", "hex", "security"]

[dependencies]
failure = { version = "0.1", default-features = false }
failure_derive = "0.1"
zeroize = { version = "0.7", default-features = false, optional = true, path = "../zeroize" }

[features]
default = ["base64", "hex", "std"]
alloc = []
base64 = ["zeroize"]
bech32-preview = ["alloc", "zeroize"]
hex = []
std = ["alloc", "zeroize"]

[badges]
maintenance = { status = "passively-maintained" }
travis-ci = { repository = "iqlusioninc/crates", branch = "develop" }

[package.metadata.docs.rs]
features = ["bech32-preview"]
