[package]
name        = "subtle-encoding"
description = """
Encoders and decoders for common data encodings (base64, bech32, hex)
which avoid data-dependent branching/table lookups and therefore
provide "best effort" constant time. Useful for encoding/decoding
secret values such as cryptographic keys.
"""
version     = "0.6.0-pre"
authors     = ["Tony Arcieri <tony@iqlusion.io>"]
license     = "Apache-2.0 OR MIT"
homepage    = "https://github.com/iqlusioninc/crates/"
repository  = "https://github.com/iqlusioninc/crates/tree/main/subtle-encoding"
readme      = "README.md"
categories  = ["cryptography", "encoding", "no-std"]
keywords    = ["base64", "bech32", "constant-time", "hex", "security"]
edition     = "2024"
rust-version = "1.85"

[dependencies.zeroize]
version = "1"
optional = true
default-features = false

[features]
default = ["base64", "hex", "std"]
alloc = []
base64 = ["zeroize"]
bech32-preview = ["alloc", "zeroize"]
hex = []
std = ["alloc", "zeroize"]

[badges]
maintenance = { status = "passively-maintained" }

[package.metadata.docs.rs]
features = ["bech32-preview"]
