[package]
name        = "tai64"
description = "TAI64 and TAI64N (i.e. Temps Atomique International) timestamp support for Rust"
version     = "3.1.0" # Also update html_root_url in lib.rs when bumping this
authors     = ["Tony Arcieri <tony@iqlusion.io>", "sopium <sopium@mysterious.site>"]
license     = "Apache-2.0"
edition     = "2018"
homepage    = "https://github.com/iqlusioninc/crates/"
repository  = "https://github.com/iqlusioninc/crates/tree/develop/tai64"
readme      = "README.md"
categories  = ["date-and-time", "internationalization", "network-programming", "no-std", "parser-implementations"]
keywords    = ["tai64", "time", "timestamps", "chrono"]

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
chrono = { version = "0.4", optional = true, default-features = false }
serde = { version = "1", optional = true, default-features = false }
zeroize = { version = "1.1.0", optional = true, default-features = false }

[features]
default = ["std"]
std = []

[dev-dependencies]
quickcheck = "1.0"

[package.metadata.docs.rs]
all-features = true
