[package]
name        = "tendermint-rpc"
description = """
              API wrapper for the Tendermint JSONRPC/HTTP interface, with
              support for communicating with running full nodes.
              """
version     = "0.0.0" # Also update html_root_url in lib.rs when bumping this
authors     = ["Tony Arcieri <tony@iqlusion.io>"]
license     = "Apache-2.0"
edition     = "2018"
homepage    = "https://github.com/iqlusioninc/crates/"
repository  = "https://github.com/iqlusioninc/crates/tree/master/tendermint-rpc"
readme      = "README.md"
categories  = ["api-bindings", "cryptography"]
keywords    = ["blockchain", "cosmos", "tendermint", "rpc"]

[badges]
travis-ci = { repository = "iqlusioninc/crates" }

[dependencies]
failure = "0.1"
gaunt = "0.1"
semver = { version = "0.9", features = ["serde"] }
serde = "1"
serde_derive = "1"
serde_json = "1"
tendermint = "0.6"

[features]
integration = []
