[package]
name        = "zeroize_derive"
description = "Custom derive support for zeroize"
version     = "0.9.3"
authors     = ["Tony Arcieri <tony@iqlusion.io>"]
license     = "Apache-2.0 OR MIT"
edition     = "2018"
homepage    = "https://github.com/iqlusioninc/crates/"
repository  = "https://github.com/iqlusioninc/crates/tree/develop/zeroize_derive"
readme      = "README.md"
categories  = ["cryptography", "memory-management", "no-std", "os"]
keywords    = ["memory", "memset", "secure", "volatile", "zero"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "0.4"
quote = "0.6"
syn = "0.15"
synstructure = "0.10"

[badges]
travis-ci = { repository = "iqlusioninc/crates", branch = "develop" }

[package.metadata.docs.rs]
rustdoc-args = ["--document-private-items"]
