[package]
name        = "zeroize_derive"
description = "Custom derive support for zeroize"
version     = "1.0.0"
authors     = ["Tony Arcieri <tony@iqlusion.io>"]
license     = "Apache-2.0 OR MIT"
edition     = "2018"
homepage    = "https://github.com/iqlusioninc/crates/"
repository  = "https://github.com/iqlusioninc/crates/tree/develop/zeroize_derive"
readme      = "README.md"
categories  = ["cryptography", "memory-management", "no-std", "os"]
keywords    = ["memory", "memset", "secure", "volatile", "zero"]

[lib]
proc-macro = true

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = "1"
synstructure = "0.12"

[package.metadata.docs.rs]
rustdoc-args = ["--document-private-items"]
